# mr_imagen

./: .gitignore  plugin_info.json  pyproject.toml
src/mr_imagen/: __init__.py  core.py  gen.py  imagesize.py  mod.py
